Fix missing include xhtml files, update version

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include resetpassword/public *
 recursive-include resetpassword/templates *.html
+recursive-include resetpassword/templates *.xhtml
 global-exclude *.pyc
 
